# OpenEnv

./: .gitignore  Dockerfile  README.md  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_openenv.py  test_reset.py  verify_reset.py
env/: __init__.py  email_env.py
server/: app.py
